add update wallet route
